# ChangeLog for x11-plugins/gkrellmms
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.24 2004/03/17 00:48:14 avenj Exp $

*gkrellmms-2.1.15 (16 Mar 2004)

  16 Mar 2004; Jon Portnoy <avenj@gentoo.org> gkrellmms-2.1.15.ebuild :
  Version bump.

  01 Mar 2004; Markus Nigbur <pyrania@gentoo.org> gkrellmms-2.1.13.ebuild:
  Stable on x86.

*gkrellmms-2.1.14 (28 Feb 2004)

  28 Feb 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.14.ebuild:
  Version bumped. Closes 42832

  25 Feb 2004; Sven Blumenstein <bazik@gentoo.org> gkrellmms-2.1.13.ebuild:
  Stable on sparc.

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> gkrellmms-2.1.12.ebuild:
  stable on alpha

*gkrellmms-2.1.13 (06 Dec 2003)

  06 Dec 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.13.ebuild:
  Version bumped.

  07 Oct 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-0.5.6.ebuild,
  gkrellmms-0.5.8.ebuild:
  changed depend to gkrellm fixed version. Closes #27060.

  04 Sep 2003; Aron Griffis <agriffis@gentoo.org> gkrellmms-2.1.12.ebuild:
  add ~alpha to KEYWORDS

  17 Jul 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.12.ebuild,
  gkrellmms-0.5.8.ebuild :
  Marked x86 stable.

*gkrellmms-2.1.12 (25 Jun 2003)

  25 Jun 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.12.ebuild:
  Version bumped. Closes #23155

*gkrellmms-2.1.9 (23 Mar 2003)

  23 Mar 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.9.ebuild:
  Version bumped.

*gkrellmms-2.1.8 (19 Feb 2003)

  19 Feb 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.8.ebuild
  files/digest-gkrellmms-2.1.8 :
  Version bumped.

*gkrellmms-2.1.6 (16 Jan 2003)

  19 Feb 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.6.ebuild :
  Marking as stable.

  16 Jan 2003; Seemant Kulleen <seemant@gentoo.org> gkrellmms-2.1.6.ebuild
  files/digest-gkrellmms-2.1.6 :
