@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmms
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.24 2004/03/17 00:48:14 avenj Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.25 2004/04/12 16:42:32 aliz Exp $
+
+  12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> gkrellmms-2.1.14.ebuild:
+  Stable on x86 and amd64, adding IUSE.
 
 *gkrellmms-2.1.15 (16 Mar 2004)
 
